Added a filter JDepend file. Ignored the DeleteTest and the AActionTest because although they pass by themselves, in Maven there are directories that are not released and they fail giving a bad impression when in fact it is the tests that are not perfect and don't release the directories.
git-svn-id: http://ikube.googlecode.com/svn/trunk@47 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -18,3 +18,4 @@ Other things:
    the result to a mail address. Perhaps dome profiling information, etc.
 * Add a configuration for a file system
 * Add a configuration for a mail account
+* Add a database tester to re-connect if the database becomes dis-connected
