--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -1,16 +1,20 @@
 03.11.10
 * Wiki - 1
-* Testing - 5
-* Add the other parsers - 3
+* Testing - 7
+   1) Cluster - 3
+   2) Linux - 1
+   3) Multiple data sources - 1
+   4) Large volumes - 1
+   5) Performance - 1
 * Add the file and url visitors - 10
 * Implementation of updating the index with deltas from the client - 3
 
-Total - 23
+Total - 25
 
 Done:
 * Finish the clustering support - 3 *
 * Implement the synchronisation between the servers - 1 *
-
+* Add the other parsers - 3
 
 
 Other things:
