--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -28,7 +28,9 @@ Other things:
    indexes/periods
 * Add a shutdown hook for the Spring objects that need to be closed when the context
   gets refreshed.
+* Test the parsers
 
+Done;:
 * Delete the database file on startup locally *
 * Add a reporting module that checks the database connection, the indexes in the different contexts and sends
    the result to a mail address. Perhaps some profiling information, etc. *
