--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -1,27 +1,27 @@
 03.11.10
-* Wiki - 1
+* Wiki - 3
 * Testing - 7
-   1) Cluster - 3 *
    2) Linux - 1
    3) Multiple data sources - 1
-   4) Large volumes - 1
-   5) Performance - 1 *
-* Add the file and url visitors - 5
+* Add the file and url visitors - 5 * 1/2
 * Implementation of updating the index with deltas from the client - 3
 
 Total - 16
 
 Done:
+* Cluster - 3 *
 * Finish the clustering support - 3 *
 * Implement the synchronization between the servers - 1 *
 * Add the other parsers - 3 *
+* Performance - 1 *
+* Large volumes - 1 *
 
 Other things:
 * Add a database tester to re-connect if the database becomes disconnect
 * Add sorting to the multi and single searchers
 * Is there automatically language support, i.e. are languages handled transparently
 * Add changes in the data to results? I.e. save the previous data and in the results
-   offer a series of documents representing how they changes over the
+   offer a series of documents representing how they changed over the
    indexes/periods
 * Add a shutdown hook for the Spring objects that need to be closed when the context
   gets refreshed.
@@ -33,6 +33,7 @@ Other things:
 * Result clustering
 * Boosting
 * Reporting (e.g. Google Analytics)
+* Add a maximum documents per server parameter
 
 Done:
 * Delete the database file on startup locally *
