--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -1,9 +1,8 @@
 03.11.10
 * Wiki - 3
-* Testing - 7
+* Testing - 7 * 1/2
    2) Linux - 1
    3) Multiple data sources - 1
-* Add the file and url visitors - 5 * 1/2
 * Implementation of updating the index with deltas from the client - 3
 
 Total - 16
@@ -15,6 +14,7 @@ Done:
 * Add the other parsers - 3 *
 * Performance - 1 *
 * Large volumes - 1 *
+* Add the file and url visitors - 5 *
 
 Other things:
 * Add a database tester to re-connect if the database becomes disconnect
