git-svn-id: http://ikube.googlecode.com/svn/trunk@197 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -4,6 +4,7 @@
 * Wiki/documentation/JavaDoc - 3
 * Data generator two with files - 1/2
 * Servlet/Ejb - 1
+* New data structure, perhaps patients in a hospital
 
 Total - 5 1/2
 
