--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -15,6 +15,8 @@
 * Implement distance sorting, i.e. given the co-ordinates of the originator and the co-ordinates
    of the results sort them from the closest to the furthest from the orginator - 2
 * Add facets to the search possibilities - 5
+* Add slave to run on the client machine and transfer data to the master running 
+   on our servers as a hosting service.
 
 Total - +-31
 
