--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -2,18 +2,19 @@
 
 * UI - client front end for search and monitoring - 3 1/2 (Michael)
    Logging on a topic for the gui to collect for the whole cluster is an idea
-   1) Search page for the documentation *
    2) Administration to start an in index - 4 hours
    3) Monitoring page to see what the servers are doing - 1
-   4) Search page to search the individual indexes - 1
+   1) Search page for the documentation *
+   4) Search page to search the individual indexes - 1 *
 * Re-factor common code to tools module - 1
-* Documentation - 1
-  1) On the Google code site - 2 hours
-  2) Migrate the documentation from docs to the application - 4 hours 
-  3) On Wiki Pedia - 1 hour
-  4) On various Java sites - 4 hours 
+* Documentation - 6 hours
+  3) On Wiki Pedia - 2 hours
+  4) On various Java sites - 4 hours
+  2) Migrate the documentation from docs to the application - 4 hours *
+  1) On the Google code site - 2 hours * 
+* Back up action - 4 hours
 
-Sub Total: 5
+Sub Total: 3 1/2
 
 * Implementation of updating the index with deltas from the client - 3
 * Move the datasource to a central location for the table indexables - 4 hours
