--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -2,19 +2,22 @@
 
 * UI - client front end for search and monitoring - 3 1/2 (Michael)
    Logging on a topic for the gui to collect for the whole cluster is an idea
-   2) Administration to start an in index - 4 hours
-   3) Monitoring page to see what the servers are doing - 1
-   1) Search page for the documentation *
+   2) Administration to start an in index - 1
+   3) Monitoring page to see what the servers are doing - 1 *
+   1) Search page for the documentation - 1 *
    4) Search page to search the individual indexes - 1 *
-* Re-factor common code to tools module - 1
-* Documentation - 6 hours
-  3) On Wiki Pedia - 2 hours
+* Documentation - 1
+  3) On Wiki Pedia - 4 hours
   4) On various Java sites - 4 hours
   2) Migrate the documentation from docs to the application - 4 hours *
-  1) On the Google code site - 2 hours * 
-* Back up action - 4 hours
+  1) On the Google code site - 4 hours * 
+* Expanded monitoring - 3
+* SMS messages for monitoring actions - 2
+* Secure datasource connections - 3
+* Secure web service and servlet - 3
+* Security - 3
 
-Sub Total: 3 1/2
+Sub Total: 17
 
 * Implementation of updating the index with deltas from the client - 3
 * Move the datasource to a central location for the table indexables - 4 hours
@@ -22,13 +25,9 @@ Sub Total: 3 1/2
 * Test writing the index across the network, and reading, perhaps a stress test too - 1
 * Add a shutdown that closes everything when the application is being un-deployed 
    so the new application starts the application context cleanly - 3
+Sub total: 11 1/2
 
-In progress:
-* UI
-* Implement distance sorting, i.e. given the co-ordinates of the originator and the co-ordinates
-   of the results sort them from the closest to the furthest from the orginator - 3 (Michael)
-
-Total: +-18
+Total: +-35
 
 Done:
 * Cluster - 3 *
@@ -49,6 +48,9 @@ Done:
 * Create automated integration tests in different environments - 3 *
 * Add the possibility for persistence in JPA - 1 *
 * Stress and load test the web service - 1 *
+* Back up action - 4 hours *
+* Implement distance sorting, i.e. given the co-ordinates of the originator and the co-ordinates
+   of the results sort them from the closest to the furthest from the orginator - 3 (Michael) *
 
 Other things:
 * Add a database tester to re-connect if the database becomes disconnected - 4 hours
@@ -66,6 +68,7 @@ Other things:
 * Reporting (e.g. Google Analytics) - 1
 * Add a maximum documents per server parameter - 1
 * Performance benchmarking - 3
+* UI *
 
 Done:
 * Delete the database file on startup locally *
@@ -86,3 +89,4 @@ Won't Do:
    on our servers as a hosting service.
 * Add possibility to have index in memory so as not to write on the file system - 3
 * Add facets to the search possibilities - 5
+* Re-factor common code to tools module - 1 *
