--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -1,21 +1,15 @@
 03.11.10
 
-* UI - client front end for search and monitoring - 3 1/2 (Michael)
-   Logging on a topic for the gui to collect for the whole cluster is an idea
-   2) Administration to start an in index - 1
-   3) Monitoring page to see what the servers are doing - 1 *
-   1) Search page for the documentation - 1 *
-   4) Search page to search the individual indexes - 1 *
 * Documentation - 1
   3) On Wiki Pedia - 4 hours
   4) On various Java sites - 4 hours
   2) Migrate the documentation from docs to the application - 4 hours *
   1) On the Google code site - 4 hours * 
 * Expanded monitoring - 3
-* SMS messages for monitoring actions - 2
-* Secure datasource connections - 3
-* Secure web service and servlet - 3
-* Security - 3
+* EJB for secure access - 1
+* Enrich the geospatial data with cities and countries - ?
+   1) First with the country data within the data - 1
+   2) With Google or NavTec data - 2
 
 Sub Total: 17
 
@@ -51,8 +45,14 @@ Done:
 * Back up action - 4 hours *
 * Implement distance sorting, i.e. given the co-ordinates of the originator and the co-ordinates
    of the results sort them from the closest to the furthest from the orginator - 3 (Michael) *
+* UI - client front end for search and monitoring - 3 1/2 (Michael)
+   Logging on a topic for the gui to collect for the whole cluster is an idea
+   2) Administration to start an in index - 1
+   3) Monitoring page to see what the servers are doing - 1 *
+   1) Search page for the documentation - 1 *
+   4) Search page to search the individual indexes - 1 *
 
-Other things:
+Nice to have:
 * Add a database tester to re-connect if the database becomes disconnected - 4 hours
 * Add changes in the data to results? i.e. save the previous data and in the results - 3
    offer a series of documents representing how they changed over the 
@@ -68,7 +68,9 @@ Other things:
 * Reporting (e.g. Google Analytics) - 1
 * Add a maximum documents per server parameter - 1
 * Performance benchmarking - 3
-* UI *
+* SMS messages for monitoring actions - 2
+* Secure datasource connections - 3
+* Update the boosting according to the usage clicks, i.e. ranking - 3
 
 Done:
 * Delete the database file on startup locally *
@@ -90,3 +92,5 @@ Won't Do:
 * Add possibility to have index in memory so as not to write on the file system - 3
 * Add facets to the search possibilities - 5
 * Re-factor common code to tools module - 1 *
+* Secure web service and servlet - 3 *
+* Security - 3 *
