Added some tests. Implemented the monitoring completely. Added some front end. Etc...
git-svn-id: http://ikube.googlecode.com/svn/trunk@447 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -10,6 +10,8 @@
 * Enrich the geospatial data with cities and countries - ?
    1) First with the country data within the data - 1
    2) With Google or NavTec data - 2
+* Test the serialization of Cyrillic and other character sets during the search
+   and the de-serialization of the results - 1 hour
 
 Sub Total: 17
 
