Updated the tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@452 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -12,6 +12,7 @@
    2) With Google or NavTec data - 2
 * Test the serialization of Cyrillic and other character sets during the search
    and the de-serialization of the results - 1 hour
+* Add a disk full check, in the ui and in the handlers - 1
 
 Sub Total: 17
 
