--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -5,16 +5,16 @@
   4) On various Java sites - 4 hours
   2) Migrate the documentation from docs to the application - 4 hours *
   1) On the Google code site - 4 hours * 
-* Expanded monitoring - 3
 * EJB for secure access - 1
 * Enrich the geospatial data with cities and countries - ?
    1) First with the country data within the data - 1
    2) With Google or NavTec data - 2
-* Test the serialization of Cyrillic and other character sets during the search
-   and the de-serialization of the results - 1 hour
-* Add a disk full check, in the ui and in the handlers - 1
+* Verify why the cluster is not acting as expected ?
+* Change the search url from the servlet to the web service ?
+* Implement paging in the search results - 1
+* Add the web service urls to the servers page - 1
 
-Sub Total: 17
+Sub Total: 7
 
 * Implementation of updating the index with deltas from the client - 3
 * Move the datasource to a central location for the table indexables - 4 hours
@@ -54,6 +54,10 @@ Done:
    3) Monitoring page to see what the servers are doing - 1 *
    1) Search page for the documentation - 1 *
    4) Search page to search the individual indexes - 1 *
+* Add a disk full check, in the ui and in the handlers - 1 *
+* Expanded monitoring - 3 *
+* Test the serialization of Cyrillic and other character sets during the search
+   and the de-serialization of the results - 1 hour *
 
 Nice to have:
 * Add a database tester to re-connect if the database becomes disconnected - 4 hours
