Did some re-factoring and finished the documentation.
git-svn-id: http://ikube.googlecode.com/svn/trunk@458 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -13,6 +13,7 @@
 * Change the search url from the servlet to the web service ?
 * Implement paging in the search results - 1
 * Add the web service urls to the servers page - 1
+* Write a script to automate the deploy to the local repository for drivers etc. - 1
 
 Sub Total: 7
 
