Added paging to the results page. Updated the web services. Refined the cluster action rules. Modified the spelling tag.
git-svn-id: http://ikube.googlecode.com/svn/trunk@472 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -18,7 +18,7 @@
    with some graphical data, including the Cpu and Io and all the rest from the 
    sampling.
 * Add a page with Cpu and system sampling data using Sigar API or JavaSysMon.
-  1) Cou tree
+  1) Cpu tree
   2) Disk usage
   3) Ram usage
   4) Up time
