Updated the JavaDoc, did a little cleaning and increased the index size to 100 000 000.
git-svn-id: http://ikube.googlecode.com/svn/trunk@478 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -26,6 +26,9 @@
 * Do a configuration page that lets the user see the configuration per index and indexable
 * Do an action log page with all the actions that were performed and the results from the rules
 * Verify why the two indexes have the same timestamp
+* Add the actions to the database and a page to see them with the 
+  time stamps for all the servers.
+
 
 Sub Total: 7
 
