Added another rule to check for newer indexes. Updated the JavaDoc.
git-svn-id: http://ikube.googlecode.com/svn/trunk@499 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -23,6 +23,9 @@
   3) Ram usage
   4) Up time
   5) Open files
+* Add search results tracking
+  Analysis of the search results with resulting reports, top queries, results from queries etc.
+* Taxonomy and synonyms
 
 Sub Total: 7
 
