--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -1,10 +1,10 @@
 03.11.10
 
 * Documentation - 1
-  3) On Wiki Pedia - 4 hours
-  4) On various Java sites - 4 hours
-  2) Migrate the documentation from docs to the application - 4 hours *
-  1) On the Google code site - 4 hours * 
+   3) On Wiki Pedia - 4 hours
+   4) On various Java sites - 4 hours
+   2) Migrate the documentation from docs to the application - 4 hours *
+   1) On the Google code site - 4 hours * 
 * EJB for secure access - 1
 * Enrich the geospatial data with cities and countries - ?
    1) First with the country data within the data - 1
@@ -18,14 +18,16 @@
    with some graphical data, including the Cpu and Io and all the rest from the 
    sampling.
 * Add a page with Cpu and system sampling data using Sigar API or JavaSysMon.
-  1) Cpu tree
-  2) Disk usage
-  3) Ram usage
-  4) Up time
-  5) Open files
+   1) Cpu tree
+   2) Disk usage
+   3) Ram usage
+   4) Up time
+   5) Open files
 * Add search results tracking
-  Analysis of the search results with resulting reports, top queries, results from queries etc.
+   Analysis of the search results with resulting reports, top queries, results from queries etc.
 * Taxonomy and synonyms
+* Persist the results of the rules along with the action
+* Get the start time for each action and the end time and persist it
 
 Sub Total: 7
 
