Refactored some classes, cleaned up a little, added a refresh button to change the refresh rate and a page to view the actions including a paging section.
git-svn-id: http://ikube.googlecode.com/svn/trunk@770 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/src/main/webapp/WEB-INF/i18n/i18n_en.properties
+++ b/code/war/src/main/webapp/WEB-INF/i18n/i18n_en.properties
@@ -4,3 +4,6 @@ login.password=Password
 login.loginbutton=Login
 security.logged.in.as=Logged in as
 security.logout=Logout
+
+refresh.rate=Refresh rate
+actions=Actions
