--- a/code/war/src/main/webapp/WEB-INF/i18n/i18n_fr.properties
+++ b/code/war/src/main/webapp/WEB-INF/i18n/i18n_fr.properties
@@ -4,3 +4,6 @@ login.password=Password
 login.loginbutton=Login
 security.logged.in.as=Logged in as
 security.logout=Logout
+
+refresh.rate=Refresh rate
+actions=Actions
