--- a/docs/Todo.txt
+++ b/docs/Todo.txt
@@ -1,44 +1,31 @@
 03.11.10
+21.05.12
 
 * Documentation - 1
-   3) On Wiki Pedia - 4 hours
-   4) On various Java sites - 4 hours
+   3) On Wiki Pedia - 4 hours *
+   4) On various Java sites - 4 hours *
    2) Migrate the documentation from docs to the application - 4 hours *
    1) On the Google code site - 4 hours * 
-* EJB for secure access - 1
 * Enrich the geospatial data with cities and countries - ?
    1) First with the country data within the data - 1
    2) With Google or NavTec data - 2
-* Log all the actions and the rules that set them in motion and do a page to view them. This 
-   means using ObjectDb as well of course, i.e. some kind of persistence.
-* Add more logging data and create a page with a report of the details, perhaps 
-   with some graphical data, including the Cpu and Io and all the rest from the 
-   sampling.
-* Add a page with Cpu and system sampling data using Sigar API or JavaSysMon.
-   1) Cpu tree
-   2) Disk usage
-   3) Ram usage
-   4) Up time
-   5) Open files
 * Add search results tracking
-   Analysis of the search results with resulting reports, top queries, results from queries etc.
-* Taxonomy, stemming and synonyms, perhaps other language results too
-* Persist the results of the rules along with the action
-* Get the start time for each action and the end time and persist it
+   Analysis of the search results with resulting reports, top queries, results from queries etc. - 3
+* Taxonomy, stemming and synonyms, perhaps other language results too - 1
+* Persist the results of the rules along with the action - 1
 
 Sub Total: 7
 
 * Implementation of updating the index with deltas from the client - 3
 * Move the data source to a central location for the table indexables - 4 hours
-* Add strategies for indexing large files like zips - 3
 * Test writing the index across the network, and reading, perhaps a stress test too - 1
 * Do a configuration page that lets the user see the configuration per index and indexable
-* Do an action log page with all the actions that were performed and the results from the rules
-* Add the actions to the database and a page to see them with the time stamps for all the servers.
 * System test with report - 5
-Sub total: 16 1/2
 
-Total: +-41
+Sub total: 9 1/2
+
+Total: 16 1/2
+
 
 Bugs:
 
@@ -82,6 +69,10 @@ Done:
 * Implement paging in the search results - 1 *
 * Write a script to automate the deploy to the local repository for drivers etc. - 1 *
 * Verify why the two indexes have the same timestamp *
+* Get the start time for each action and the end time and persist it *
+* Add strategies for indexing large files like zips - 3 *
+* Do an action log page with all the actions that were performed and the results from the rules
+* Add the actions to the database and a page to see them with the time stamps for all the servers.
 
 Nice to have:
 * Add a database tester to re-connect if the database becomes disconnected - 4 hours
@@ -122,3 +113,10 @@ Won't Do:
 * Add facets to the search possibilities - 5
 * Re-factor common code to tools module - 1 *
 * Secure web service and servlet - 3 *
+* Add a page with Cpu and system sampling data using Sigar API or JavaSysMon.
+   1) Cpu tree
+   2) Disk usage
+   3) Ram usage
+   4) Up time
+   5) Open files
+   
