--- a/docs/asciidoc/install.ad
+++ b/docs/asciidoc/install.ad
@@ -1,8 +1,8 @@
 [[Installation]]
-= Installation
+=== Installation
 
 [Download]
-== Download
+==== Download
 
 Ikube is available for download in the http://ikube.be/artifactory[Artifactory]. As a web application ikube is
 available as a war file that can be installed on any Java server, Tomcat, FireFly, etc. As well as the war application
@@ -17,14 +17,14 @@ we wil user a http://tomcat.apache.org/download-70.cgi[Tomcat] server. Please do
 place on your computer, could all be in the Downloads folder.
 
 [Install]
-== Install
+==== Install
 
 Rename the ikube-war-xxx-xxx.war to ikube.war, it will make the web access easier, but not essential. Create
 a folder in the $TOMCAT_UNPACKED_FOLDER/bin called ikube. The directory structure is important for now. Unpack the
 ikube-libs-xxx-xxx.jar using WinRar or unzip feature, into the $TOMCAT_UNPACKED_FOLDER/bin/ikube folder.
 
 [Configure]
-== Configure
+==== Configure
 
 If your ip address is something other than 192.168.1.x please change the interface for the grid. We'll get into the grid
 mechanism in a later document. In the folder $TOMCAT_UNPACKED_FOLDER/bin/ikube/common open a file called spring.properties. Go
@@ -36,7 +36,7 @@ that you may need to change the permissions of the scripts on Linux to make them
 the Tomcat root directory, i.e. $TOMCAT_UNPACKED_FOLDER.
 
 [Verify]
-== Verify
+==== Verify
 
 Go to the http://localhost:8080/ikube/login.html[Administration Console]. The login credentials are user/user
 or administrator/administrator. Please refer to the gui documentation for functionality and options in the gui.
